--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,8 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import numpy as np\n"
    ]
   },
   {
