--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "py_list = [1,2,3,4]"
    ]
   },
   {
