--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "py_list = [1,2,3,4]"
+    "py_list = [0,1,2,3,4]\n",
+    "py_range = "
    ]
   },
   {
