--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
    "source": [
     "#Your code here\n",
     "py_list = [0,1,2,3,4]\n",
-    "py_range = "
+    "py_range = range(5)\n",
+    "array_from_lis"
    ]
   },
   {
