--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,8 @@
     "#Your code here\n",
     "py_list = [0,1,2,3,4]\n",
     "py_range = range(5)\n",
-    "array_from_lis"
+    "array_from_list = np.array(py_list)\n",
+    "array_from"
    ]
   },
   {
