--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     "py_list = [0,1,2,3,4]\n",
     "py_range = range(5)\n",
     "array_from_list = np.array(py_list)\n",
-    "array_from"
+    "array_from_range = np.array(py_range)"
    ]
   },
   {
