--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,8 @@
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here\n"
+    "#Your code here\n",
+    "height_array = np.array(list_height_inches)\n"
    ]
   },
   {
