--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,8 @@
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
     "#Your code here\n",
-    "height_array = np.array(list_height_inches)\n"
+    "height_array = np.array(list_height_inches)\n",
+    "height_array "
    ]
   },
   {
