Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,18 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([65, 68, 73, 75, 78])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
     "#Your code here\n",
     "height_array = np.array(list_height_inches)\n",
-    "height_array "
+    "height_array * .0254\n",
+    "height_array"
    ]
   },
   {
