Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "#Your code here\n",
     "height_array = np.array(list_height_inches)\n",
-    "height_array *= .0254\n",
+    "height_array  = .0254\n",
     "height_array"
    ]
   },
