Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,8 +128,8 @@
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
     "#Your code here\n",
-    "height_array = np.array(list_height_inches)\n",
-    "height_array  = height_array * .0254\n",
+    "height_inches = np.array(list_height_inches)\n",
+    "height_  = height_array * .0254\n",
     "height_array"
    ]
   },
