--- a/index.ipynb
+++ b/index.ipynb
@@ -129,8 +129,8 @@
     "\n",
     "#Your code here\n",
     "height_inches = np.array(list_height_inches)\n",
-    "height_  = height_array * .0254\n",
-    "height_array"
+    "height_m  = height_inches * .0254\n",
+    "height_array\\"
    ]
   },
   {
