Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "array([1.651 , 1.7272, 1.8542, 1.905 , 1.9812])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
     "#Your code here\n",
     "height_inches = np.array(list_height_inches)\n",
     "height_m  = height_inches * .0254\n",
-    "height_array\\"
+    "height_m"
    ]
   },
   {
