Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,8 @@
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
     "#your code here\n",
-    "weight_lb = "
+    "weight_lb = np.array(list_weight_pounds)\n",
+    "weight_"
    ]
   },
   {
