--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "#your code here\n",
     "weight_lb = np.array(list_weight_pounds)\n",
-    "weight_"
+    "weight_k = weight_lb / 2"
    ]
   },
   {
