Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,8 @@
     "\n",
     "#your code here\n",
     "weight_lb = np.array(list_weight_pounds)\n",
-    "weight_k = weight_lb / 2"
+    "weight_k = weight_lb / 2.2046\n",
+    "weight_"
    ]
   },
   {
