Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,11 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 68.03955366,  63.50358342,  99.79134537,  92.98739   ,\n",
+       "       120.20321147])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
@@ -147,7 +157,7 @@
     "#your code here\n",
     "weight_lb = np.array(list_weight_pounds)\n",
     "weight_k = weight_lb / 2.2046\n",
-    "weight_"
+    "weight_k"
    ]
   },
   {
@@ -173,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n"
    ]
   },
   {
