Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "BMI = weight_k / "
+    "BMI = weight_k / height_m^2"
    ]
   },
   {
