Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "BMI = weight_k / height_m**2\n",
+    "BMI = weight_k / (height_m*height_m)\n",
     "BMI"
    ]
   },
