Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,23 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1.])"
+       "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "np.ones(3)"
+    "np.ones(5)"
    ]
   },
   {
