--- a/index.ipynb
+++ b/index.ipynb
@@ -206,16 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1., 1., 1.])"
+       "array([[1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +243,8 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "BMI * "
    ]
   },
   {
