--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -218,14 +218,15 @@
        "       [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "np.ones((4,4))"
+    "vec = np.ones((4,4))\n",
+    "vec"
    ]
   },
   {
@@ -244,7 +245,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "BMI * "
+    "BMI * vec"
    ]
   },
   {
