--- a/index.ipynb
+++ b/index.ipynb
@@ -206,23 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1., 1., 1.])"
+       "array([[1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "vec = np.ones(1,5))\n",
+    "vec = np.ones((1,5))\n",
     "vec"
    ]
   },
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+       "array([[24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
