Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,8 +288,9 @@
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
-    "mat = np.zeroes()\n",
+    "mat = np.zeroes(21,1)\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
+    "\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
     "    #Hint: skip the first row (its just column names, not the data.)\n",
     "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
