--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "#1) Create a matrix of zeros that is the same size of the file\n",
     "mat = np.zeroes(21,1)\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
-    "for line\n",
+    "for line in f:\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
     "    #Hint: skip the first row (its just column names, not the data.)\n",
     "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
