Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,16 +285,16 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
-    "#Your code here\n",
-    "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
-    "mat = np.zeroes(21,1)\n",
-    "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
-    "for line in f:\n",
+    "matrix = np.zeros([n_rows, n_cols])\n",
+    "#2) Iterate through the file: \"for line in f:\"\n",
+    "for n, line in enumerate(f):\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
-    "    \n",
     "    #Hint: skip the first row (its just column names, not the data.)\n",
-    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
+    "    if n > 0:\n",
+    "        matrix[n,:] = line.split('\\t')\n",
+    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n",
+    "matrix\n"
    ]
   },
   {
